[package]
name = "nextid_sdk"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for NextID components"
tags = ["nextid"]
license = "MIT"
homepage = "https://next.id"
repository = "https://github.com/nextdotid/sdk_rust"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
