[package]
name = "nextid_sdk"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for NextID components"
tags = ["nextid"]
license = "MIT"
homepage = "https://next.id"
repository = "https://github.com/nextdotid/sdk_rust"

[dependencies]
# General
thiserror = "1.0"

# HTTP client
hyper = { version = "0.14", features = ["client", "http2"]}

# Crypto
rand = "0.8"
libsecp256k1 = "0.7"
sha3 = "0.10" # Keccak256
base64 = "0.13"
hex = "0.4"
hex-literal = "0.3"

[dev-dependencies]
tokio = { version = "1.21", features = ["full"] }