[package]
name = "nextid_sdk"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for NextID components"
tags = ["nextid"]
license = "MIT"
homepage = "https://next.id"
repository = "https://github.com/nextdotid/sdk_rust"

[dependencies]
# General
thiserror = "1.0"

# HTTP client
# TODO: should not use "full" feature here: too heavy.
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "*"
tokio = { version = "1", features = ["full"] }
http = "*"
url = "2"

# Data structure related
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "*"
strum_macros = "*"
chrono = "0.4"

# Crypto
rand = "0.8"
libsecp256k1 = "0.7"
sha3 = "0.10" # Keccak256
base64 = "0.13"
hex = "0.4"
hex-literal = "0.3"
